<resources>
    <!--Eng. Titles-->
    <string name="app_name">Play2Gether</string>
    <string name="title_home">Home</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_room">Room</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="title_room_invites">Room Invites</string>
    <string name="title_search_room">Search Room</string>
    <string name="title_logout">Logout</string>
    <string name="title_leave">Leave room</string>
    <string name="title_invites">Invites</string>
    <string name="title_queue">Queue</string>
    <string name="title_users">Users</string>
    <string name="title_chat">Chat</string>
    <string name="title_invite">Invite</string>
    <string name="title_clear_queue">Clear room queue</string>
    <string name="title_select_device">Select playback device</string>
    <string name="title_sync_with_room">Sync with room</string>

    <!--Eng. Hints-->
    <string name="hint_room_password_optional">Room Password (Optional)</string>
    <string name="hint_room_password_required">Room Password</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="hint_search_room">Search Room or Owner</string>
    <string name="hint_search_friends">Search Friends</string>
    <string name="hint_search_invites">Search Room Invites</string>

    <!--Eng. Descriptions-->
    <string name="description_profile_image">Profile Image</string>
    <string name="description_online_status">Online Status Image</string>
    <string name="description_lock_button">Private Room Image</string>
    <string name="description_music_note">Music Note Image</string>
    <string name="description_error_image">Error Image</string>
    <string name="description_logo_of_play2gether">Logo of Play2Gether</string>
    <string name="description_country_flag_image">Country Flag Image</string>
    <string name="description_join_button">Join Button</string>
    <string name="description_ignore_button">Ignore Button</string>
    <string name="description_accept_button">Accept Button</string>
    <string name="description_reject_button">Reject Button</string>
    <string name="description_song_cover_image">Song cover image</string>
    <string name="description_upvote_song_button">Upvote song button</string>
    <string name="description_downvote_song_button">Downvote song button</string>
    <string name="description_play_button">Play button</string>
    <string name="description_next_button">Next button</string>
    <string name="description_previous_button">Previous button</string>
    <string name="description_repeat_button">Replay button</string>
    <string name="description_search_model_cover_image">Search Model Cover Image</string>
    <string name="description_friend_request_icon">Friend Request Icon</string>
    <string name="description_play_song_button">Play song button</string>
    <string name="description_delete_song_button">Delete song button</string>

    <!--Eng. Placeholders-->
    <string name="placeholder_cancel">Cancel</string>
    <string name="placeholder_login_button">Login with Spotify</string>
    <string name="placeholder_create_room">Create New Room</string>
    <string name="placeholder_join_room">Join Room</string>
    <string name="placeholder_an_error_occurred">An error occurred</string>
    <string name="placeholder_email">Email:</string>
    <string name="placeholder_room_owner">Owner:</string>
    <string name="placeholder_room_now_playing_song">Playing:</string>
    <string name="placeholder_room_paused_song">Paused:</string>
    <string name="placeholder_room_next_song">Next:</string>
    <string name="placeholder_room_song_not_found">No song found in the room</string>
    <string name="placeholder_room_user_not_found">Not in any room</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_friend_counts"> Friends</string>
    <string name="placeholder_song_and_room_status">Song and Room Status</string>
    <string name="placeholder_song_and_room_status_helper">In</string>
    <string name="placeholder_spotify_account_id">Spotify Account ID:</string>
    <string name="placeholder_anthem">Anthem:</string>
    <string name="placeholder_settings">Settings</string>
    <string name="placeholder_set_anthem">Set Anthem</string>
    <string name="placeholder_app_description">Listen to Spotify with your friends</string>
    <string name="placeholder_room_inviter">Inviter Name</string>
    <string name="placeholder_member_since">Member since</string>
    <string name="placeholder_user_name">Username</string>
    <string name="placeholder_friend_request_date">Request Date:</string>
    <string name="placeholder_song_artists">Song Artists</string>
    <string name="placeholder_song_name">Song Name</string>
    <string name="placeholder_song_vote">0</string>
    <string name="placeholder_add_song">Add song</string>
    <string name="placeholder_search_spotify">Search</string>
    <string name="placeholder_search_spotify_expanded">Search</string>
    <string name="placeholder_search_model_name">Search Model Name</string>
    <string name="placeholder_search_model_artists">Search Model Artists</string>
    <string name="placeholder_search_model_type">Model Type</string>
    <string name="placeholder_add_song_to_room">Add</string>
    <string name="placeholder_search_query">Search Query</string>
    <string name="placeholder_room_name">Room Name</string>
    <string name="placeholder_room_name_expanded">Room:</string>
    <string name="placeholder_song_default_time">00:00</string>
    <string name="placeholder_play_song">Play Song</string>
    <string name="placeholder_upvote_song">Upvote Song</string>
    <string name="placeholder_downvote_song">Downvote Song</string>
    <string name="placeholder_delete_song">Delete Song</string>
    <string name="placeholder_device_name">Device Name</string>
    <string name="placeholder_device_type">Device Type</string>
    <string name="placeholder_user_role">User Role</string>
    <string name="placeholder_user_message">Message</string>
    <string name="placeholder_invite_user">Search with username…</string>
    <string name="placeholder_close">Close</string>
    <string name="placeholder_change_role">Change Users Role</string>
    <string name="placeholder_empty_list">Nothing found here…</string>

    <!--Eng. Errors-->
    <string name="err_authorization_code">Can not get authorization code from Spotify</string>
    <string name="err_room_websocket_reconnect">Trying to reconnect the room.</string>
    <string name="err_network_closed">No internet connection, please check your connection.</string>
    <string name="err_room_refresh">Rooms can not refreshed</string>
    <string name="err_room_invites_refresh">Rooms Invites can not refreshed</string>
    <string name="err_room_queue_refresh">Queue can not refreshed</string>
    <string name="err_room_user_refresh">Users can not refreshed</string>
    <string name="err_room_queue_add">10 songs or 1 Album/Playlist can be added in each search!</string>
    <string name="err_song_vote">Song voted before</string>

    <!--Eng. Warnings-->
    <string name="warn_room_websocket_closed">Connection to the room closed…</string>
    <string name="warn_room_websocket_reconnecting">Reconnecting the room…</string>

    <!--Eng. Infos-->
    <string name="info_yes">Yes</string>
    <string name="info_no">No</string>
    <string name="info_logged_in">Logged in as</string>
    <string name="info_sync">Playback synced with room</string>
    <string name="info_not_playing">There is no song in the room</string>
    <string name="info_leave_room">Are you sure you want leave room?</string>
    <string name="info_clear_queue">Are you sure you want clear room queue?</string>
    <string name="info_queue_cleared">Room queue cleared</string>
    <string name="info_closed">closed</string>
    <string name="info_device_change">Active device changed.</string>
    <string name="info_delete_friend">Are you sure you want to delete friend?</string>
    <string name="info_search_queue">Search with query</string>
    <string name="info_search_invite">Search users with name</string>
    <string name="info_song_upvoted">upvoted</string>
    <string name="info_song_downvoted">downvoted</string>
    <string name="info_promote_demote">\'s role updated as</string>
    <string name="info_change_owner1">Are you sure you want make</string>
    <string name="info_change_owner2">\'s Role ROOM_OWNER? (Your role will be demoted to ROOM_ADMIN)</string>
    <string name="info_friend_request_send">Friend request sent to</string>
    <string name="info_room_invite_send">invited to room.</string>
    <string name="info_room_websocket_connected">Connected to room.</string>
    <string name="description_owner_image">Owner Image</string>
    <string name="retry">Retry</string>

</resources>
