<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/dialog_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_room_name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_room_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_room_password_optional"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/dialog_create_room_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/placeholder_create_room" />

    <Button
        android:id="@+id/dialog_cancel_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_cancel" />

</LinearLayout>