<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    android:focusable="true"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_user_name"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_photo_image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:text="@string/placeholder_room_name_expanded" />

        <TextView
            android:id="@+id/room_song_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/placeholder_room_now_playing_song"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/room_name"
            app:layout_constraintTop_toBottomOf="@+id/room_name" />

        <ImageView
            android:id="@+id/lock_view"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:contentDescription="@string/description_lock_button"
            app:layout_constraintBottom_toBottomOf="@+id/room_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/room_name"
            app:layout_constraintTop_toTopOf="@+id/room_name"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_lock_lock" />

        <ImageView
            android:id="@+id/profile_photo_image_view"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/description_profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile_image" />

        <ImageButton
            android:id="@+id/join_button"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/description_join_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play_circle_outline_black_24dp" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/description_reject_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_reject_24dp" />

        <ImageView
            android:id="@+id/online_status_online_image_view"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:contentDescription="@string/description_online_status"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/profile_photo_image_view"
            app:layout_constraintEnd_toEndOf="@+id/profile_photo_image_view"
            app:srcCompat="@android:drawable/presence_online" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
