<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    android:focusable="true"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/room_inviter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_room_inviter"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profilePhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/profilePhoto"
            app:layout_constraintTop_toBottomOf="@+id/room_inviter"
            tools:text="@string/placeholder_room_name_expanded" />

        <TextView
            android:id="@+id/roomSongStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/placeholder_room_now_playing_song"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profilePhoto"
            app:layout_constraintTop_toBottomOf="@+id/roomName"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/description_profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile_image" />

        <ImageButton
            android:id="@+id/accept_button"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/description_accept_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/reject_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_accept_24dp" />

        <ImageButton
            android:id="@+id/reject_button"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/description_reject_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_reject_24dp" />

        <ImageView
            android:id="@+id/onlineStatus"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:contentDescription="@string/description_online_status"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/profilePhoto"
            app:layout_constraintEnd_toEndOf="@+id/profilePhoto"
            app:srcCompat="@android:drawable/presence_online" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
